--- a/site/content/blog/2024/2024_09_22_generics.md
+++ b/site/content/blog/2024/2024_09_22_generics.md
@@ -6,5 +6,28 @@ authors = ["Jeff Mitchell"]
 draft = true
 [taxonomies]
 categories = ["Beginner Guides"]
-tags = ["rust", "data types", "generics"]
+tags = ["rust", "generics"]
 +++
+
+## Introduction
+
+Repetition in code can be a killer. At the very least, you're creating opportunities for errors due to forgetfulness. An error maybe caught in one place, but the sheer volume of repeated code might make it difficult to catch **all** instances of the error.
+
+Been there, done that.
+
+What if there was a way to write code so that the same function, method, or type could accommodate different types of specific data?  Well, the good news in Rust is that you certainly can.  
+
+Let's dive in!
+
+## What Can be Generic?
+
+*Functions*
+
+*Data Types*
+
+*Methods*
+
+
+## References
+
+- [The Rust Programming Language, Chapter 10.1: Generic Data Types](https://doc.rust-lang.org/book/ch10-01-syntax.html)
